--- a/src/template.html
+++ b/src/template.html
@@ -16,5 +16,27 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <div class="welcome">
+      <div class="welcome-header">
+        <img src="./assets/img/game-title.png" alt="game title" />
+      </div>
+      <div class="welcome-body">
+        <form id="form-player">
+          <div class="form-action">
+            <label for="player-name">ENTER PLAYER NAME</label>
+            <input
+              type="text"
+              name="playerName"
+              id="player-name"
+              placeholder="BATTLESHIP COMBATANT"
+            />
+          </div>
+          <div class="form-action">
+            <button type="submit">START GAME</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </body>
 </html>
