add error-message when name not given

--- a/src/template.html
+++ b/src/template.html
@@ -31,6 +31,7 @@
               id="player-name"
               placeholder="BATTLESHIP COMBATANT"
             />
+            <span class="form-message disabled">name required</span>
           </div>
           <div class="form-action">
             <button type="submit">START GAME</button>
