fix welcome transition to placeship

--- a/src/template.html
+++ b/src/template.html
@@ -39,6 +39,6 @@
         </form>
       </div>
     </div>
-    <div class="place-ship"></div>
+    <div class="place-ship disabled"></div>
   </body>
 </html>
