--- a/src/template.html
+++ b/src/template.html
@@ -40,5 +40,6 @@
       </div>
     </div>
     <div class="place-ship disabled"></div>
+    <div class="play-ground disabled"></div>
   </body>
 </html>
