add modal to announce winner

--- a/src/template.html
+++ b/src/template.html
@@ -41,5 +41,6 @@
     </div>
     <div class="place-ship disabled"></div>
     <div class="play-ground disabled"></div>
+    <dialog class="modal disabled"></dialog>
   </body>
 </html>
