--- a/src/template.html
+++ b/src/template.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div class="welcome">
-      <div class="welcome-header">
+      <!-- <div class="welcome-header">
         <img src="./assets/img/game-title.png" alt="game title" />
       </div>
       <div class="welcome-body">
@@ -37,7 +37,7 @@
             <button type="submit">START GAME</button>
           </div>
         </form>
-      </div>
+      </div> -->
     </div>
     <div class="place-ship disabled"></div>
     <div class="play-ground disabled"></div>
