done restart game

--- a/src/template.html
+++ b/src/template.html
@@ -17,28 +17,7 @@
     />
   </head>
   <body>
-    <div class="welcome">
-      <!-- <div class="welcome-header">
-        <img src="./assets/img/game-title.png" alt="game title" />
-      </div>
-      <div class="welcome-body">
-        <form id="form-player">
-          <div class="form-action">
-            <label for="player-name">ENTER PLAYER NAME</label>
-            <input
-              type="text"
-              name="playerName"
-              id="player-name"
-              placeholder="BATTLESHIP COMBATANT"
-            />
-            <span class="form-message disabled">name required</span>
-          </div>
-          <div class="form-action">
-            <button type="submit">START GAME</button>
-          </div>
-        </form>
-      </div> -->
-    </div>
+    <div class="welcome"></div>
     <div class="place-ship disabled"></div>
     <div class="play-ground disabled"></div>
     <dialog class="modal disabled"></dialog>
